crates/pyenum-derive/tests/ui/fail/strenum_int_discriminant.rs
use pyenum::PyEnum;

#[derive(Clone, Copy, PyEnum)]
#[pyenum(base = "StrEnum")]
pub enum Bad {
    Ok = 1,
    No = 2,
}

fn main() {}
